--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <title>Welcome To EdgeLedger</title>
 </head>
-<body id="home"><a href="index.html"><i class="fas fa-chevron-up fa-4px-"></i></a>
+<body id="home"><a href="#"><i class="fas fa-chevron-up fa-4px-"></i></a>
     
     <div class="navbar">
        
